# euro-bess-radar

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
docs/: import-templates.md
scripts/: __init__.py  convert_netztransparenz_imbalance.py  diag_ida_availability.py  seed_demo_9_2b.py
src/: activation_overlay.py  analytics.py  ancillary.py  ancillary_fetchers.py  assumptions.py  config.py  contracted_floor.py  cycle_frontier.py  da_forecast.py  data_ingestion.py  data_trust.py  degradation.py  dispatch.py  export.py  forward_curve.py  ida_forecast.py  ida_scenarios.py  imbalance_overlay.py  liquidity.py  portfolio.py  reserve_forecast.py  scenario.py  simulation.py  stochastic_dispatch.py  strategy_compare.py  time_utils.py  trader_benchmark.py  ui_theme.py
tests/: conftest.py  test_activation_overlay.py  test_analytics.py  test_ancillary.py  test_assumptions.py  test_batch_export.py  test_contracted_floor.py  test_cycle_frontier.py  test_da_forecast.py  test_data_trust.py  test_degradation.py  test_dispatch.py  test_export.py  test_forward_curve.py  test_ida_forecast.py  test_ida_scenarios.py  test_imbalance_overlay.py  test_ingestion.py  test_liquidity.py  test_netztransparenz_converter.py  test_portfolio.py  test_reserve_forecast.py  test_revenue_estimation_decay.py  test_scenario.py  test_seed_demo.py  test_sidebar.py  test_simulation.py  test_simulation_cockpit_contracted_floor.py  test_simulation_cockpit_frontier.py  test_stochastic_batch.py  test_stochastic_dispatch.py  test_strategy_compare.py  (+2 more)
(+22 files in other folders)
