[project]
name = "euro-bess-radar"
version = "1.0.0"
description = "European BESS Market Screening Dashboard"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

dependencies = [
    "entsoe-py>=0.7.7,<0.9.0",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "python-dotenv>=1.0,<2.0",
    "requests>=2.31,<3.0",
    "streamlit>=1.43,<2.0",
    "plotly>=6.0,<7.0",
    "openpyxl>=3.1,<4.0",
    "kaleido>=0.2,<1.0",
    "fpdf2>=2.8,<3.0",
    "scipy>=1.12,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "pandas-stubs>=2.2",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (Streamlit pattern)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
